src/tests/routes/crates/snapshots/all__routes__crates__reverse_dependencies__reverse_dependencies-2.snap
---
source: src/tests/routes/crates/reverse_dependencies.rs
expression: response.json()
---
{
  "dependencies": [],
  "meta": {
    "total": 0
  },
  "versions": []
}
